Dark mode CSS – Fix Notifications' color
screenshot : before/after https://prnt.sc/gxkgk0

--- a/style/client.css
+++ b/style/client.css
@@ -117,7 +117,7 @@ select {
 	color: #F9F9F9;
 }
 .dark a.button.subtle-notifying {
-	color: #AA6600;
+	color: #61A3BB;
 }
 
 .dark .textbox {
